# LaneLinux

./: Binary_Frame.cpp  Binary_Frame.h  BirdView.cpp  BirdView.h  CMakeLists.txt  GrayFrame.cpp  GrayFrame.h  HSVFrame.cpp  HSVFrame.h  LaneDetection.sh  LaneProcessing.cpp  Leftprocessing.cpp  Leftprocessing.h  README.md  RESIZEFrame.cpp  RESIZEFrame.h  RightProcessing.cpp  Rightprocessing.h  VechicleDetection.sh  Writeup Template.md  adjust.cpp  binary.cpp  binary.h  gray.cpp  hsv.cpp  morphopAlgo.cpp  morphopAlgo.h  processa.h  processb.h  processedout_initialize.cpp  processedout_terminate.cpp  processinga.cpp  processingb.cpp  resize.cpp  resize.h  rtwtypes.h  sobelfilter.cpp  sobelfilter.h  unwrap.cpp  unwrap.h  (+2 more)
Debug/: makefile  objects.mk  sources.mk  subdir.mk
Debug/LaneLogic/ADVANCELANE/LaneLogic_grt_rtw/: subdir.mk
